--- a/File - Nm project.html
+++ b/File - Nm project.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <img src="Img.jpg" alt="Your Profile Picture" class="profile-picture">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vignesh - Portfolio</title>
@@ -67,6 +68,15 @@
         <p>I hereby declare that the above information is true and correct to the best of my knowledge.</p>
         <p><strong>Signature:</strong> Vignesh</p>
     </section>
+    <section id="resume">
+    
+        <div class="section-content">
+            <center>
+            <h2>Resume</h2>
+            <a href="./mycv.pdf" target="_blank" class="download-button">Download CV</a>
+        </center>
+        </div>
+            </section>
 
     <footer>
         <p>&copy; 2025 Pavithra | All Rights Reserved</p>
