Update File - Nm project.html

--- a/File - Nm project.html
+++ b/File - Nm project.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="eng">
 <head>
-    <img src="Img.jpg" alt="Your Profile Picture" class="profile-picture">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vignesh - Portfolio</title>
@@ -10,6 +9,7 @@
 <body>
 
     <header>
+        <img src="Img.jpg" alt="Your Profile Picture" class="profile-picture">
         <h1>Vignesh</h1>
         <p><a href="mailto:[Your Email]">[Vigneshceo153@gmail.com]</a> | [9360787669]</p>
     </header>
@@ -79,8 +79,10 @@
             </section>
 
     <footer>
-        <p>&copy; 2025 Pavithra | All Rights Reserved</p>
+        <p>&copy; 2025 Vignesh| All Rights Reserved</p>
     </footer>
+</body>
+</html>
 
 </body>
 </html>
