--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <img src="IMG_20250326_145517.jpg" alt="Your Profile Picture" class="profile-picture">
         <h1>Vignesh</h1>
-        <p><a href="mailto:[Your Email]">[vickyny03@gmail.com]</a> | [9360787669]</p>
+        <p><a href="mailto:[Your Email]">[vigneshceo153@gmail.com]</a> | [9360787669]</p>
     </header>
 
     <section class="career-objective">
